Fixed a bug which was causing the modal to start sliding down from a position that was visible. Slowed down the modal animation.

--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -1,4 +1,5 @@
 @animation-speed:250ms;
+@animation-speed-slow:375ms;
 @default-animation-delay:0ms;
 
 @dialog-z-index:9;
